[project]
name = "pyLogFormats"
version = "0.2.2"
description = "A collection of useful log formats for Python Loggers."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = [ "logging", "logging_formats", "logger", "log", "log_formats" ]
authors = [
    { name = "Matt Limb", email = "matt.limb17@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/MattLimb/pylogformats"

[tool.flit.module]
name = "pylogformats"

[build-system]
requires = ["flit_core <4"]
build-backend = "flit_core.buildapi"
