[metadata]
# replace with your username:
name = pyLogFormats
version = 0.1.0
url = https://github.com/MattLimb/pylogformats
author = Matt Limb
author_email = matt.limb17@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
description = A collection of useful log formats for Python Loggers.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6